2008-01-06  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/htaccess: add php handler for
	www.gnome.org/new-friends/step2.php.

2008-01-06  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/new-friends/step2.php,
	www.gnome.org/new-friends/Makefile.am: rename to step2.php to
	step2.wml.

2008-01-06  Lucas Rocha  <lucasr@gnome.org>

	* configure.in, www.gnome.org/new-friends/Makefile.am,
	www.gnome.org/new-friends/include/*: remove unused file. 

2008-01-05  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/new-friends/*: set proper title in the page header.

2008-01-05  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/new-friends/*, configure.in: new Friends of GNOME
	website. For now, it's in this temporary location until we get
	everything properly tested and working.

2008-12-22  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/index.wml:
	* www.gnome.org/press/releases/2008-12-sugarlabs.wml:
	* www.gnome.org/press/releases/Makefile.am:
	* www.gnome.org/press/releases/index.wml: add news & PR about Sugar
	Labs joining the Foundation

2008-12-16  daniel g. siegel <dgsiegel@gmail.com>

	* projects.gnome.org/cheese/download.html,
	  projects.gnome.org/cheese/index.html: 
	  populate the cheese 2.25.3 release

2008-12-10  Brian Cameron  <brian.cameron@sun.com>

	* configure.in, www.gnome.org/projects/gdm/docs.html
	  www.gnome.org/projects/gdm/Makefile.am,
	  www.gnome.org/projects/gdm/docs: Remove docs.
	* www.gnome.org/projects/gdm/*.html: Now point to docs at
	  http://library.gnome.org/admin/gdm/.

2008-12-10  Brian Cameron  <brian.cameron@sun.com>

	* www.gnome.org/projects/gdm/*.html: Updated to reference
	  2.24 as the latest stable release and 2.25 as the latest
	  unstable release.
	* www.gnome.org/projects/gdm/screenshots.html,
	  www.gnome.org/projects/gdm/images/Makefile.am,
	  www.gnome.org/projects/gdm/images/*.png: Removed screenshots
	  since they are now so old.
	* www.gnome.org/projects/gdm/docs/2.20/*: Updated 2.20 docs