@@ -140,6 +140,18 @@
         <div id="bottomRight">
           <h2>News</h2>
 
+          <h3>January 5th 2009</h3>
+          <p>
+          <b>Unstable</b>
+          version 2.25.4 was released!
+          New in this release
+          </p>
+          <ul>
+            <li>only updated translations</li>
+          </ul>
+          <a href="download">Download it</a>
+          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-January/msg00016.html">full release notes</a>)
+
           <h3>December 16th 2008</h3>
           <p>
           <b>Unstable</b>
