@@ -1,3 +1,9 @@
+2009-01-07  daniel g. siegel <dgsiegel@gmail.com>
+
+	* projects.gnome.org/cheese/download.html,
+	  projects.gnome.org/cheese/index.html: 
+	  populate the cheese 2.25.4 release
+
 2008-01-06  Lucas Rocha  <lucasr@gnome.org>
 
 	* www.gnome.org/htaccess: add php handler for
